tests/compile_fail/declare_scheduler_topology_vs_constraints_default_topology_min_numa_nodes_exceeds.stderr
error: declare_scheduler!: constraints.min_numa_nodes (2) exceeds effective topology numa_nodes (1); every gauntlet preset would reject this test at runtime and the test would never execute. (`topology` field omitted; macro fell back to Scheduler::new's default `(numa=1, llcs=1, cores=2, threads=1)`. Add an explicit `topology = (numa, llcs, cores, threads)` to override.)
  --> tests/compile_fail/declare_scheduler_topology_vs_constraints_default_topology_min_numa_nodes_exceeds.rs:13:25
   |
13 |         min_numa_nodes: 2,
   |                         ^
